@@ -12,7 +12,6 @@ import org.springframework.hateoas.RepresentationModel;
 import org.springframework.hateoas.server.RepresentationModelAssembler;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @NoArgsConstructor(access = AccessLevel.NONE)
 public class PageUtils {
@@ -21,7 +20,7 @@ public class PageUtils {
         List<T> slice = list.stream()
                 .skip((long) pageable.getPageNumber() * pageable.getPageSize())
                 .limit(pageable.getPageSize())
-                .collect(Collectors.toList());
+                .toList();
 
         return new PageImpl<>(slice, pageable, list.size());
     }
